# OCaml-GObject-Introspection

./: .appveyor.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .travis-build-jbuilder.sh  .travis-build.sh  .travis-gobject-introspection.sh  .travis-libffi.sh  .travis-opam.sh  .travis.yml  CHANGELOG.md  Makefile  README.md  _oasis  _oasis_conf.rb  _oasis_template  build_and_test.sh  build_docs.sh  clean.sh  dune-project  gobject-introspection.opam  gobject-introspection.opam.template  ocaml-gobject-introspection.opam  s  style.css  tags
.github/workflows/: main.yml
_coverage/: file0000.html  file0001.html  file0002.html  file0003.html  file0004.html  file0005.html  file0006.html  file0007.html  file0008.html  file0009.html  file0010.html  file0011.html  file0012.html  file0013.html  file0014.html  file0015.html  file0016.html  file0017.html  file0018.html  file0019.html  file0020.html  file0021.html  file0022.html  file0023.html  file0024.html  file0025.html  file0026.html  file0027.html  index.html
bindings/: Arg_info.ml  Base_info.ml  Field_info.ml  Function_info.ml  GParam.ml  GSignal.ml  Types.ml  VFunc_info.ml  bindings.ml  dune  utils.ml
config/: discover.ml  dune
docs/: Builder.html  BuilderConstant.html  BuilderEnum.html  BuilderFunction.html  BuilderStruct.html  BuilderUnion.html  BuilderUtils.html  Conversions.html  GIArgInfo.html  GIBaseInfo.html  GICallableInfo.html  GIConstantInfo.html  GIEnumInfo.html  GIFieldInfo.html  GIFunctionInfo.html  GIInterfaceInfo.html  GIObjectInfo.html  GIPropertyInfo.html  GIRegisteredTypeInfo.html  GIRepository.html  GISignalInfo.html  GIStructInfo.html  GITypeInfo.html  GITypes.html  GIUnionInfo.html  GIVFuncInfo.html  GIValueInfo.html  GObjectIntrospection.html  GObject_introspection.odoc  GObject_introspection__Arg_info.odoc  GObject_introspection__Base_info.odoc  GObject_introspection__Callable_info.odoc  GObject_introspection__Constant_info.odoc  GObject_introspection__Conversions.odoc  GObject_introspection__Enum_info.odoc  GObject_introspection__Field_info.odoc  GObject_introspection__Function_info.odoc  GObject_introspection__Interface_info.odoc  GObject_introspection__Object_info.odoc  GObject_introspection__Property_info.odoc  (+57 more)
docs/Bindings/: index.html
docs/Bindings__/: index.html
docs/Bindings__Arg_info/: index.html
docs/Bindings__Field_info/: index.html
docs/Bindings__Function_info/: index.html
docs/Bindings__GParam/: index.html
docs/Bindings__GSignal/: index.html
docs/Bindings__Types/: index.html
docs/Bindings__VFunc_info/: index.html
docs/GObjectIntrospection/: index.html
docs/GObjectIntrospection__Arg_info/: index.html
lib/: .merlin  Arg_info.ml  Arg_info.mli  Base_info.ml  Base_info.mli  Bind_constant.ml  Bind_constant.mli  Bind_enum.ml  Bind_enum.mli  Bind_function.ml  Bind_function.mli  Bind_struct.ml  Bind_struct.mli  Bind_union.ml  Bind_union.mli  Binding_utils.ml  Binding_utils.mli  Bindings_builder.ml  Bindings_builder.mli  Bindings_utils.ml  Bindings_utils.mli  Builder.ml  Builder.mli  BuilderConstant.ml  BuilderConstant.mli  BuilderEnum.ml  BuilderEnum.mli  BuilderFunction.ml  BuilderFunction.mli  BuilderStruct.ml  BuilderStruct.mli  BuilderUnion.ml  BuilderUnion.mli  BuilderUtils.ml  BuilderUtils.mli  Callable_info.ml  Callable_info.mli  Constant_info.ml  Constant_info.mli  Conversions.ml  (+97 more)
lib-c/: GIFunctionInfo.ml  GIRepository.ml  GIStructInfo.ml  conversions.h  gibaseinfo_stubs.c  gifieldinfo_stubs.c  gifunctioninfo_stubs.c  girepository_stubs.c  gistructinfo_stubs.c  gistructinfo_stubs.h  giunioninfo_stubs.c  giunioninfo_stubs.h  utils.h
lib/GLib/: ocaml-glib.opam
lib/GLib/config/: discover.ml
lib/GLib/lib/: Array.ml  Array.mli  BookmarkFile.ml  ByteArray.ml  ByteArray.mli  Cond.mli  Data.ml  DebugKey.mli  Dir.ml  DoubleIEEE754.mli  Error.mli  FloatIEEE754.ml  HashTable.ml  HashTableIter.mli  Hook.ml  Hook.mli  KeyFile.ml  List.ml  LogField.mli  MainContext.ml  MappedFile.ml  MarkupParser.ml  MarkupParser.mli  MemVTable.ml  Node.mli  Once.ml  Once.mli  OptionEntry.ml  PollFD.ml  RWLock.ml  Rand.ml  SList.ml  SList.mli  ScannerConfig.ml  ScannerConfig.mli  Sequence.ml  SequenceIter.ml  Source.ml  Source.mli  SourceCallbackFuncs.ml  (+14 more)
lib/GLib/tests/: jbuild  test.ml
samples/: dune  gi_baseinfo_deprecated.ml  gi_baseinfo_discriminated.ml  gi_baseinfo_get_name.ml  gi_baseinfo_get_type.ml  gi_baseinfo_print_attributes.ml  gi_baseinfo_print_function_flags.ml  gi_builder_glib.ml  gi_repository.ml  jbuild  loader_glib_viewer.ml
samples/GLib/: _oasis  (+4 more)
stubgen/: bindings_c_gen_arg_info.ml  bindings_c_gen_base_info.ml  bindings_c_gen_field_info.ml  bindings_c_gen_function_info.ml  bindings_c_gen_g_param.ml  bindings_c_gen_g_signal.ml  bindings_c_gen_types.ml  bindings_c_gen_vfunc_info.ml  dune
tests/: TestBindConstant.ml  TestBindEnum.ml  TestBindFunction.ml  TestBindStruct.ml  TestBindUnion.ml  TestBindingsUtils.ml  TestBuilderConstant.ml  TestBuilderEnum.ml  TestBuilderFunction.ml  TestBuilderStruct.ml  TestBuilderUnion.ml  TestBuilderUtils.ml  TestGIArgInfo.ml  TestGIBaseInfo.ml  TestGICallableInfo.ml  TestGIConstantInfo.ml  TestGIEnumInfo.ml  TestGIFieldInfo.ml  TestGIFunctionInfo.ml  TestGIInterfaceInfo.ml  TestGIObjectInfo.ml  TestGIPropertyInfo.ml  TestGIRegisteredTypeInfo.ml  TestGIRepository.ml  TestGISignalInfo.ml  TestGIStructInfo.ml  TestGITypeInfo.ml  TestGIUnionInfo.ml  TestGIVFuncInfo.ml  TestLoader.ml  TestUtils.ml  Test_arg_info.ml  Test_base_info.ml  Test_bind_constant.ml  Test_bind_enum.ml  Test_bind_function.ml  Test_bind_struct.ml  Test_bind_union.ml  Test_binding_utils.ml  Test_callable_info.ml  (+21 more)
tests-c/: TestGIFieldInfo.ml  TestGIRepository.ml  TestGIStructInfo.ml  test.ml
tools/: README.md  gio_raw_generator.ml  glib_raw_generator.ml  jbuild
travis/: Dockerfile.centos-6  Dockerfile.centos-7  Dockerfile.debian-buster  Dockerfile.fedora-29  Dockerfile.ubuntu-16.04  Dockerfile.ubuntu-17.04  Dockerfile.ubuntu-17.10  Dockerfile.ubuntu-18.10  install-macos-deps  run-macos-tests
travis_bkp/: Dockerfile.ubuntu-17.10  Dockerfile.ubuntu-18.04
(+1043 files in other folders)
