opam-version: "2.0"
name: "OCaml-GObject-Introspection"
version: "0.1"
maintainer: "Cédric Le Moigne <cedlemo@gmx.com>"
authors: "Cédric Le Moigne <cedlemo@gmx.com>"
homepage: "https://github.com/cedlemo/OCaml-GObject-Introspection"
bug-reports: "https://github.com/cedlemo/OCaml-GObject-Introspection/issues"
license: "GPL3"
dev-repo: "git+https://github.com/cedlemo/OCaml-GObject-Introspection.git"
synopsis: "OCaml bindings for the GObject-Introspection library (https://gi.readthedocs.io/en/latest/)"
description: "This library provides bindings based on Ctypes for the libgirepository API (see https://developer.gnome.org/gi/stable/)"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"
  "dune" {build}
  "ctypes"
  "ctypes-foreign"
  "ounit"
  "base"
  "stdio"
  "configurator"
]
