(library
 (name        GObject_introspection)
  (public_name gobject-introspection)
  (libraries ctypes ctypes.foreign str)
  (c_flags         (:include c_flags.sexp))
  (c_library_flags (:include c_library_flags.sexp))
)
(rule
  (targets c_flags.sexp c_library_flags.sexp)
  (deps    (:x ../config/discover.exe))
  (action  (run %{x} -ocamlc %{ocamlc}))
)
